# blender-agentic-bonsai-sketcher-mcp

./: .gitignore  .mcp.json  CONTRIBUTORS.md  Makefile  readme.md  readme_local_llm.rst
.cursor/rules/: blender_mcp_agent_knowledge.mdc  blender_mcp_bim.mdc
_misc/: check_license.py  check_namespace.py
addon/: README.md
agents/: Dockerfile  README.md  __init__.py  agent.py  config.py  event_trace.py  http_app.py  knowledge_loader.py  main.py  quiet_warnings.py  requirements.txt  runner.py  tools.py
agents/knowledge/: README.md  bonsai-slab-from-cad-sketcher.md  mcp-blender-investigation.md
mcp/: .env.example  .mcpbignore  Dockerfile  README.md  docker-compose.yml  env_apply.sh  pyproject.toml  requirements.txt
mcp/blmcp/: __init__.py  http_app.py
mcp/blmcp/data/: prompts.yml
mcp/blmcp/tools/: bim_add_pset.py  bim_assign_spatial.py  bim_clash.py  bim_create_element.py  bim_edit.py  bim_execute_bonsai_op.py  bim_info.py  bim_load_ifc.py  bim_object_sync.py  bim_quantify.py  bim_save_ifc.py  bim_select.py  bim_status.py  bim_summary.py  bim_tree.py  bim_validate.py
mcp/blmcp/tools_helpers/: bonsai_helpers.py
tests/: Dockerfile  __init__.py  docker-compose.test.yml  requirements.txt  run_unit_tests.py  test_agent_tools.py  test_blender_mcp_with_blender.py  test_knowledge_loader.py  test_mcp_http.py  test_mcp_server.py  test_tool_listing.py
tests/integration/: __init__.py  test_blender_mcp_with_llm.py
tests/mcp_client/: http.py
tests/utils/: mcp_connect.py
